--- a/.github/workflows/update-submodules.yml
+++ b/.github/workflows/update-submodules.yml
@@ -1,8 +1,8 @@
 name: Submodule daily check
 on: 
+  workflow_dispatch
   schedule:
     - cron: 0 0 */1 * *
-  workflow_dispatch: true
 
 jobs:
   check:
