--- a/.github/workflows/update-submodules.yml
+++ b/.github/workflows/update-submodules.yml
@@ -23,7 +23,7 @@ jobs:
         submodules: true
         ref: ${{ matrix.branches }}
     - name: Create update branch
-      run: git checkout -b csupdate/$${{ matrix.branches }}
+      run: git checkout -b csupdate/${{ matrix.branches }}
     - name: Initialize mandatory git config
       run: |
         git config user.name "GitHub Actions"
