--- a/.github/workflows/update-submodules.yml
+++ b/.github/workflows/update-submodules.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Update submodule
       run: |
         cd lib/FFXIVClientStructs
-        git pull
+        git pull origin/master
         cd ../..
         git commit --message "Update ClientStructs"
         git push origin csupdate/$${{ matrix.branches }}
