--- a/.github/workflows/update-submodules.yml
+++ b/.github/workflows/update-submodules.yml
@@ -30,7 +30,10 @@ jobs:
         git config user.email noreply@github.com
     - name: Update submodule
       run: |
-        git submodule update lib/FFXIVClientStructs
+        cd lib/FFXIVClientStructs
+        git pull origin main
+        cd ../..
+        git add lib/FFXIVClientStructs
         git commit --message "Update ClientStructs"
         git push origin csupdate/$${{ matrix.branches }}
     - name: Create PR
