--- a/.github/workflows/update-submodules.yml
+++ b/.github/workflows/update-submodules.yml
@@ -28,6 +28,7 @@ jobs:
       run: |
         git config user.name "GitHub Actions"
         git config user.email noreply@github.com
+        git config pull.rebase false
     - name: Update submodule
       run: |
         cd lib/FFXIVClientStructs
