--- a/.github/workflows/update-submodules.yml
+++ b/.github/workflows/update-submodules.yml
@@ -22,6 +22,7 @@ jobs:
       with:
         submodules: true
         ref: ${{ matrix.branches }}
+        token: ${{ secrets.PAT }}
     - name: Create update branch
       run: git checkout -b csupdate/${{ matrix.branches }}
     - name: Initialize mandatory git config
