--- a/.github/workflows/update-submodules.yml
+++ b/.github/workflows/update-submodules.yml
@@ -4,6 +4,9 @@ on:
     - cron: "0 0 */1 * *"
   workflow_dispatch:
 
+env:
+  GH_TOKEN: ${{ github.token }}
+
 jobs:
   check:
     name: Submodule check
@@ -41,7 +44,5 @@ jobs:
         git commit --message "Update ClientStructs"
         git push origin csupdate-${{ matrix.branches }}
     - name: Create PR
-      with:
-        GH_TOKEN: ${{ github.token }}
       run: |
         gh pr create --head --fill --base ${{ matrix.branches }}
